[project]
name = "discord-reddit-integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.16",
    "asyncpraw>=7.8.1",
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.1",
    "pillow>=11.2.1",
    "ruff>=0.11.5",
    "supabase>=2.15.0",
]
